@@ -8,7 +8,7 @@
 ###############################################################################
 # Plugin Metadata
 """Run the script in the current buffer"""
-__version__ = "0.9"
+__version__ = "1.0"
 
 __author__ = "Cody Precord <cprecord@editra.org>"
 __svnid__ = "$Id$"
